vchain-analysis-deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysis-deploy
  labels:
    app: analysis-service
  annotations:
spec:
  selector:
    matchLabels:
      app: analysis-service
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: analysis-service
    spec:
      containers:
      - name: analysis-service
        image: vking34/vchain-analysis-service:68b6050
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
        resources:
          requests:
            memory: "256Mi"
            cpu: "80m"
          limits:
            memory: "256Mi"
            cpu: "120m"
