vchain-analysis-deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analysis-service
spec:
    type: NodePort
    selector:
        app: analysis-service
    ports:
        - port: 8084
          targetPort: 8084
          protocol: TCP
